--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -5,3 +5,9 @@ font_family      FiraCode Nerd Font
 bold_font        auto
 italic_font      auto
 font_size        12.0
+
+enable_audio_bell no
+
+initial_window_width 64c
+initial_window_height 16c
+remember_window_size yes
